templates/devnet-deploy.json
{
  "AWSTemplateFormatVersion" : "2010-09-09",

  "Description" : "Devnet cluster deployment",

  "Mappings" : {
    "CoreOSRegionMap" : {
      "us-east-1" : { "AMI" : "ami-7a627510" },
      "us-west-2" : { "AMI" : "ami-4f7f8a2f" },
      "us-west-1" : { "AMI" : "ami-d8770bb8" },
      "eu-west-1" : { "AMI" : "ami-3b941448" }
    }
  },
  "Parameters": {
    "EnvironmentName" : {
      "Description" : "The name of the environment.",
      "Type" : "String"
    },
    "DevnetClusterSize": {
      "Default": "2",
      "MinValue": "2",
      "MaxValue": "2",
      "Description": "Number of nodes in cluster (2-5).",
      "Type": "Number"
    },
    "KeyPair" : {
      "Description" : "The name of an EC2 Key Pair to allow SSH access to the instance.",
      "Type" : "String"
    }
  },
  "Resources" : {
    "DevnetSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Devnet SecurityGroup",
        "VpcId" : { "Ref" : "VpcId" },
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "SourceSecurityGroupId": {"Ref" : "AdminSecurityGroupId"}},
          {"IpProtocol": "tcp", "FromPort": "24224", "ToPort": "24224", "CidrIp": "10.0.10.0/24"},
          {"IpProtocol": "icmp", "FromPort": "-1", "ToPort": "-1", "SourceSecurityGroupId": {"Ref" : "AdminSecurityGroupId"}}
        ],
        "Tags" : [
          {"Key" : "Environment", "Value" : {"Ref": "EnvironmentName"}},
          { "Key" : "Name", "Value" : {"Fn::Join" : [ "-", [{ "Ref": "EnvironmentName"},"devnet-allow"]]}}
        ]
      }
    },
    "DevnetAutoScale": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "VPCZoneIdentifier": [{"Ref": "AppSubnetA"}, {"Ref": "AppSubnetB"}, {"Ref" : "AppSubnetC"}],
        "LaunchConfigurationName": {"Ref": "DevnetLaunchConfig"},
        "MinSize": "2",
        "MaxSize": "2",
        "DesiredCapacity": {"Ref": "DevnetClusterSize"},
        "Tags": [
          {"Key" : "Environment", "Value" : {"Ref": "EnvironmentName"}, "PropagateAtLaunch": "true"},
          {"Key": "Name", "Value": {"Fn::Join" : [ "-", [{ "Ref": "EnvironmentName"},"devnet"]]}, "PropagateAtLaunch": "true"}
        ]
      }
    },
    "DevnetLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "BlockDeviceMappings": [{
          "DeviceName": "/dev/xvda",
          "Ebs" : {"VolumeSize": "20"}}],
        "ImageId" : { "Fn::FindInMap" : [ "CoreOSRegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
        "InstanceType": {"Ref": "DevnetInstanceType"},
        "KeyName": {"Ref": "KeyPair"},
        "SecurityGroups": [{"Ref": "DevnetSecurityGroup"}],
        "UserData" : { "Fn::Base64":
        { "Fn::Join": [ "", [
          "#cloud-config\n\n",
          "coreos:\n",
          "  update:\n",
          "    reboot-strategy: off\n",
          "  units:\n",
          "    - name: etcd2.service\n",
          "      mask: true\n",
          "    - name: fleet.service\n",
          "      command: start\n",
          "    - name: etcd2.service\n",
          "      mask: true\n",
          "    - name: fleet.service\n",
          "      command: start\n"
        ] ]
        }
        }
      }
    }
  }
}
